2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #13679]
	* Makeconfig (+link): Defined as $(+link-static) if
	$(build-shared) isn't yes.
	(link-tests): Defined as $(+link-static-tests) if $(build-shared)
	isn't yes.
	(static-gnulib): Add -lgcc_eh if $(build-shared) isn't yes.

	* Makeconfig (+postctorT): Replace crtendS.o with crtend.o.

	[BZ #14562]
	* malloc/arena.c (heap_trim): Properly get fencepost and adjust
	new chunk size with MALLOC_ALIGN_MASK.

2012-09-24  Joseph Myers  <joseph@codesourcery.com>

	[BZ #5044]
	* stdio-common/printf_fphex.c: Include <stdbool.h> and
	<rounding-mode.h>.
	(__printf_fphex): Determine rounding using get_rounding_mode and
	round_away.
	* stdio-common/tst-printf-round.c (struct hex_test): New
	structure.
	(hex_tests): New variable.
	(test_hex_in_one_mode): New function.
	(do_test): Also run tests for hex float output.

2012-09-21  Joseph Myers  <joseph@codesourcery.com>

	* libio/iopopen.c [_IO_HAVE_SYS_WAIT]: Make code unconditional.
	[!_IO_HAVE_SYS_WAIT]: Remove conditional code.
	* libio/libio.h (_IO_HAVE_SYS_WAIT): Remove.
	* libio/oldiopopen.c [_IO_HAVE_SYS_WAIT]: Make code unconditional.
	[!_IO_HAVE_SYS_WAIT]: Remove conditional code.
	* sysdeps/generic/_G_config.h (_G_HAVE_SYS_WAIT): Remove.
	* sysdeps/gnu/_G_config.h (_G_HAVE_SYS_WAIT): Likewise.
	* sysdeps/mach/hurd/_G_config.h (_G_HAVE_SYS_WAIT): Likewise.

2012-09-20  Joseph Myers  <joseph@codesourcery.com>

	* libio/libio.h [_G_NEED_STDARG_H]: Make code unconditional.
	* sysdeps/generic/_G_config.h (_G_NEED_STDARG_H): Remove.
	* sysdeps/gnu/_G_config.h (_G_NEED_STDARG_H): Remove.
	* sysdeps/mach/hurd/_G_config.h (_G_NEED_STDARG_H): Remove.

2012-09-19  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #14579]
	* elf/rtld.c (dl_main): Limit the check for self loading to normal
	mode only.
	* elf/tst-rtld-load-self.sh: New test.
	* elf/Makefile: Run it.

2012-09-18  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/wordsize-64/Makefile [$(subdir) = misc]