@@ -1,3 +1,7 @@
+2012-09-24  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* tst-tls6.sh: Add copyright header.
+
 2012-09-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* sysdeps/x86_64/tls.h (THREAD_SETMEM): Add "()" when casting
